force-app/main/default/objects/Exempted_City__c/Exempted_City__c.object-meta.xml
<CustomObject>
    <label>Exempted City</label>
    <nameField>
        <displayFormat>EXM-{0000}</displayFormat>
        <label>Exempted City Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exempted cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>