force-app/main/default/objects/Exempted_City__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exempted cities</relationshipLabel>
    <relationshipName>Exempted_cities</relationshipName>
    <type>Lookup</type>
</CustomField>