force-app/main/default/objects/Exempted_City__c/fields/Exempted_City__c.field-meta.xml
<CustomField>
    <fullName>Exempted_City__c</fullName>
    <label>Exempted City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Road</fullName>
            </value>
            <value>
                <fullName>Achalpur</fullName>
            </value>
            <value>
                <fullName>Achrol</fullName>
            </value>
            <value>
                <fullName>Addanki</fullName>
            </value>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Adoni</fullName>
            </value>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Ahmednagar</fullName>
            </value>
            <value>
                <fullName>Akaltara</fullName>
            </value>
            <value>
                <fullName>Akbarpur-Ambedkar Nagar</fullName>
            </value>
            <value>
                <fullName>Aliganj</fullName>
            </value>
            <value>
                <fullName>Amadalavalasa</fullName>
            </value>
            <value>
                <fullName>Amalapuram</fullName>
            </value>
            <value>
                <fullName>Amaravati</fullName>
            </value>
            <value>
                <fullName>Ambasamudram</fullName>
            </value>
            <value>
                <fullName>Ambikapur</fullName>
            </value>
            <value>
                <fullName>Amravati</fullName>
            </value>
            <value>
                <fullName>Amreli</fullName>
            </value>
            <value>
                <fullName>Amroha</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Ananthnag</fullName>
            </value>
            <value>
                <fullName>Ankleshwar</fullName>
            </value>
            <value>
                <fullName>Annavaram</fullName>
            </value>
            <value>
                <fullName>Annur</fullName>
            </value>
            <value>
                <fullName>Anta</fullName>
            </value>
            <value>
                <fullName>Anupgarh</fullName>
            </value>
            <value>
                <fullName>Anupshahar</fullName>
            </value>
            <value>
                <fullName>Aonia</fullName>
            </value>
            <value>
                <fullName>Arakkonam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>