force-app/main/default/objects/Exempted_City__c/fields/New_Offline_Charge__c.field-meta.xml
<CustomField>
    <fullName>New_Offline_Charge__c</fullName>
    <label>New Offline Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>